# payflow-ai

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
src/payflow/: client.py  main.py  router.py  service.py
src/payflow/agents/: validator.py
src/payflow/llm/: __init__.py  anthropic.py  base.py  gemini.py  huggingface.py
src/payflow/schemas/: __init__.py  bank.py  domain.py
src/tests/: conftest.py  test_client.py  test_models.py  test_router.py  test_service.py
